Fix overflowing img on single-photo page

--- a/app/views/photo/photo.sass
+++ b/app/views/photo/photo.sass
@@ -21,4 +21,5 @@
         height: 100%
     .lm-photo__buttons
         display: none
-
+    .lm-photo__img
+        width: 100%
